2011-08-24  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tap/awk: remove obsolete "FIXME" comment
	* lib/tap-driver.sh: Remove obsolete "FIXME" comment about our
	driver losing the exit status of the tested program; this issue
	has been solved in precedent commit `v1.11-1052-gd630a0d'.  Fix
	an unrelated typo in comments since we are at it.

2011-08-22  Stefano Lattarini  <stefano.lattarini@gmail.com>

	testsuite: avoid spurious failure on Solaris
	* tests/tap-signal.test (signal_caught): Fix a regression from
	commit `v1.11-1052-gd630a0d' that was causing this test to fail
	spuriously on Solaris (due to an already worked-around Solaris
	/bin/sh bug, see commit `v1.11-981-g0ef3ef5').

2011-08-22  Stefano Lattarini  <stefano.lattarini@gmail.com>

	testsuite: use the new awk+shell TAP driver in our own testsuite
	* tests/Makefile.am (TAP_LOG_DRIVER): Redefine to use the new
	awk+shell tap driver, which should be complete enough for use in
	a "controlled" production environment.

2011-08-22  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tap/awk: handle non-zero exit status from the test command
	* lib/tap-driver.sh (get_test_exit_message): New function in the
	awk script, used to extract the exit status of the test program,
	or at least a good guess of it.
	(write_test_results): Use it, reporting an ERROR result if it
	detects that the test program exited with a non-zero status.
	* tests/tap-signal.test: Account for the differences in the
	error messages generated by the awk and perl TAP drivers.  Fix
	an unrelated typo in comments since we are at it.

2011-08-22  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tap/awk: prepare to fetch the exit status of the test command
	* lib/tap-driver.sh: Rewrite some logic in the main parsing loop,
	to make it possible to read the exit status of the test command
	from the last line of the input stream.

2011-08-22  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tap/awk: refactor for future changes