@@ -1,5 +1,17 @@
 2011-08-24  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
+	tap/awk: don't redirect awk stderr to log files
+	* lib/tap-driver.sh: Handle the file descriptors redirections
+	more smartly, to avoid sending error messages from awk (about
+	e.g. syntax or I/O errors) to the log files instead that to the
+	console.
+	* tests/tap-driver-stderr.test: New test, verifying the improved
+	driver behaviour.  Notice that this test still fails when using
+	the perl implementation of the TAP driver.
+	* tests/Makefile.am (tap_other_tests): Update.
+
+2011-08-24  Stefano Lattarini  <stefano.lattarini@gmail.com>
+
 	tap/awk: remove obsolete "FIXME" comment
 	* lib/tap-driver.sh: Remove obsolete "FIXME" comment about our
 	driver losing the exit status of the tested program; this issue
